--- a/.travis.yml
+++ b/.travis.yml
@@ -45,9 +45,8 @@ jobs:
       install:
         - cd controller
         - go get ./...
-        - which kubebuilder
       script:
-        - go test -race -coverprofile=coverage.txt -covermode=atomic ./...
+        - make test
       after_success:
         - bash <(curl -s https://codecov.io/bash)
       cache:
