--- a/controller/config/crd/bases/core.kapp.dev_plugins.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_plugins.yaml
@@ -60,6 +60,10 @@ spec:
                 of cluster Important: Run "make" to regenerate code after modifying
                 this file'
               type: boolean
+            usingByApplications:
+              items:
+                type: string
+              type: array
           required:
           - compiledSuccessfully
           type: object
