--- a/controller/config/crd/bases/core.kapp.dev_plugins.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_plugins.yaml
@@ -43,6 +43,12 @@ spec:
               items:
                 type: string
               type: array
+            configSchema:
+              description: RawMessage is a raw encoded JSON value. It implements Marshaler
+                and Unmarshaler and can be used to delay JSON decoding or precompute
+                a JSON encoding.
+              format: byte
+              type: string
             icon:
               description: icon of this plugin
               type: string
