add config support for vm function call

--- a/controller/config/crd/bases/core.kapp.dev_plugins.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_plugins.yaml
@@ -44,11 +44,7 @@ spec:
                 type: string
               type: array
             configSchema:
-              description: RawMessage is a raw encoded JSON value. It implements Marshaler
-                and Unmarshaler and can be used to delay JSON decoding or precompute
-                a JSON encoding.
-              format: byte
-              type: string
+              type: object
             icon:
               description: icon of this plugin
               type: string
