generate component controller

--- a/controller/config/crd/bases/core.kapp.dev_applications.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_applications.yaml
@@ -38,6 +38,7 @@ spec:
           properties:
             components:
               items:
+                description: ComponentSpec defines the desired state of Component
                 properties:
                   afterStart:
                     items:
