--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -107,6 +107,26 @@ rules:
 - apiGroups:
   - core.kapp.dev
   resources:
+  - components
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - core.kapp.dev
+  resources:
+  - components/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - core.kapp.dev
+  resources:
   - dependencies
   verbs:
   - create
