--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 - bases/core.kapp.dev_plugins.yaml
 - bases/core.kapp.dev_componenttemplates.yaml
 - bases/core.kapp.dev_dependencies.yaml
+- bases/core.kapp.dev_components.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -15,6 +16,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_componenttemplates.yaml
 #- patches/webhook_in_dependencies.yaml
 #- patches/webhook_in_plugins.yaml
+#- patches/webhook_in_components.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -23,6 +25,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_componenttemplates.yaml
 #- patches/cainjection_in_dependencies.yaml
 #- patches/cainjection_in_plugins.yaml
+#- patches/cainjection_in_components.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
