--- a/controller/config/crd/bases/core.kapp.dev_components.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_components.yaml
@@ -406,6 +406,8 @@ spec:
               enum:
               - server
               - cronjob
+              - statefulset
+              - daemonset
               type: string
           required:
           - image
