--- a/controller/config/samples/core_v1alpha1_plugin.yaml
+++ b/controller/config/samples/core_v1alpha1_plugin.yaml
@@ -1,8 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: kapp-test
----
 apiVersion: core.kapp.dev/v1alpha1
 kind: Plugin
 metadata:
@@ -23,7 +18,7 @@ metadata:
 spec:
   src: |
     function ComponentFilter(component) {
-      return component.name.endsWith("tiple");
+      return component.metadata.name.endsWith("tiple");
     }
 
     function BeforeDeploymentSave(deployment) {
@@ -81,19 +76,30 @@ apiVersion: core.kapp.dev/v1alpha1
 kind: Application
 metadata:
   name: test-plugin-sample-application
-  namespace: kapp-test
 spec:
-  components:
-    - image: nginx:alpine
-      name: nginx-double
-      workloadType: server
-      pluginsNew:
-        - name: kapp-static-sacle-double
-    - image: nginx:alpine
-      name: nginx-tiple
-      workloadType: server
+
   pluginsNew:
     - name: kapp-scale-name-with-suffix-tiple
     - name: kapp-customize-probes
     - name: kapp-test-default-embedded-functions
   isActive: true
+---
+apiVersion: core.kapp.dev/v1alpha1
+kind: Component
+metadata:
+  name: nginx-double
+  namespace: test-plugin-sample-application
+spec:
+    image: nginx:alpine
+    workloadType: server
+    pluginsNew:
+      - name: kapp-static-sacle-double
+---
+apiVersion: core.kapp.dev/v1alpha1
+kind: Component
+metadata:
+  name: nginx-tiple
+  namespace: test-plugin-sample-application
+spec:
+  image: nginx:alpine
+  workloadType: server
