--- a/controller/config/crd/bases/core.kapp.dev_plugins.yaml
+++ b/controller/config/crd/bases/core.kapp.dev_plugins.yaml
@@ -62,9 +62,17 @@ spec:
                 of cluster Important: Run "make" to regenerate code after modifying
                 this file'
               type: boolean
-            usingByApplications:
+            users:
               items:
-                type: string
+                properties:
+                  applicationName:
+                    type: string
+                  componentName:
+                    type: string
+                required:
+                - applicationName
+                - componentName
+                type: object
               type: array
           required:
           - compiledSuccessfully
