--- a/controller/resources/kong_1.0.0.yaml
+++ b/controller/resources/kong_1.0.0.yaml
@@ -1,7 +1,15 @@
-apiVersion: v1
-kind: Namespace
+#apiVersion: v1
+#kind: Namespace
+#metadata:
+#  name: kapp-kong
+#---
+apiVersion: core.kapp.dev/v1alpha1
+kind: Application
 metadata:
   name: kapp-kong
+  #namespace: kapp-kong
+spec:
+  isActive: true
 ---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
@@ -483,14 +491,6 @@ spec:
     targetPort: 8080
   selector:
     app: ingress-kong
----
-apiVersion: core.kapp.dev/v1alpha1
-kind: Application
-metadata:
-  name: kapp-kong
-  namespace: kapp-kong
-spec:
-  isActive: true
 ---
 apiVersion: core.kapp.dev/v1alpha1
 kind: Component
