--- a/controller/config/rbac/role.yaml
+++ b/controller/config/rbac/role.yaml
@@ -155,6 +155,26 @@ rules:
 - apiGroups:
   - core.kapp.dev
   resources:
+  - pluginbindings
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - core.kapp.dev
+  resources:
+  - pluginbindings/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - core.kapp.dev
+  resources:
   - plugins
   verbs:
   - create
