--- a/controller/config/crd/kustomization.yaml
+++ b/controller/config/crd/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 - bases/core.kapp.dev_componenttemplates.yaml
 - bases/core.kapp.dev_dependencies.yaml
 - bases/core.kapp.dev_components.yaml
+- bases/core.kapp.dev_pluginbindings.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -17,6 +18,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_dependencies.yaml
 #- patches/webhook_in_plugins.yaml
 #- patches/webhook_in_components.yaml
+#- patches/webhook_in_pluginbindings.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -26,6 +28,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_dependencies.yaml
 #- patches/cainjection_in_plugins.yaml
 #- patches/cainjection_in_components.yaml
+#- patches/cainjection_in_pluginbindings.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
