--- a/controller/config/samples/core_v1alpha1_hipster.yaml
+++ b/controller/config/samples/core_v1alpha1_hipster.yaml
@@ -1,3 +1,10 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kapp-hipster
+  labels:
+    istio-injection: enabled
+---
 apiVersion: core.kapp.dev/v1alpha1
 kind: Application
 metadata:
