--- a/resources/istiocontrolplane.yaml
+++ b/resources/istiocontrolplane.yaml
@@ -1,3 +1,23 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: istio-system
+---
+# create kiali username and password
+#   username: admin
+#   password: admin
+apiVersion: v1
+kind: Secret
+metadata:
+  name: kiali
+  namespace: istio-system
+  labels:
+    app: kiali
+type: Opaque
+data:
+  username: YWRtaW4=
+  passphrase: YWRtaW4=
+---
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 metadata:
